# gua

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.ja.md  README.md  package.json  plan.md
.codex/skills/gua-bug-hunt/: SKILL.md
.codex/skills/gua-bug-hunt/agents/: openai.yaml
.codex/skills/gua-bug-hunt/references/: audit-matrix.md
.codex/skills/gua-repo/: SKILL.md
.github/scripts/: next-release-version.ps1
.github/workflows/: godot-plugin-release.yml  gua-release.yml  inspector-release.yml  mcp-publish.yml  nuget-publish.yml  syntax-check.yml
bindings/dotnet/src/Gua.Core/: Compatibility.cs  Gua.Core.csproj  GuaAction.cs  GuaBounds.cs  GuaContext.cs  GuaEvent.cs  GuaEventType.cs  GuaLogLevel.cs  GuaNodeDescriptor.cs  GuaNodeState.cs  GuaReset.cs  GuaSelector.cs  GuaVersion.cs  IGuaContext.cs  Native.NetStandard.cs  Native.cs  README.md
bindings/dotnet/src/Gua.Runtime/: Compatibility.cs  Gua.Runtime.csproj  GuaRuntime.cs  Native.cs  README.md
bindings/dotnet/src/Gua.Testing/: Compatibility.cs  Gua.Testing.csproj  GuaActionCompletion.cs  GuaAssertionException.cs  GuaAssertionOptions.cs  GuaAssertionScope.cs  GuaAssertions.cs  GuaCapturedScreenshot.cs  GuaDiagnostics.cs  GuaLocatorQuery.cs  GuaNodeSnapshot.cs  GuaRemoteTree.cs  GuaTestHost.cs  GuaTestSession.cs  GuaWaits.cs  GuaWebSocketContext.cs  README.md
bindings/dotnet/src/Gua.Testing.Godot/: GodotSceneTestHost.cs  GodotSceneTestHostOptions.cs  Gua.Testing.Godot.csproj  GuaRemoteContext.cs  GuaRemoteUiTree.cs  GuaScreenshot.cs  README.md
bindings/dotnet/src/Gua.Testing.Recording/: Gua.Testing.Recording.csproj  GuaRecorder.cs  GuaRecording.cs  GuaReplayer.cs  README.md
bindings/dotnet/src/Gua.Testing.Unity/: Compatibility.cs  Gua.Testing.Unity.csproj  README.md  UnityPlayerBuilder.cs  UnitySceneTestHost.cs  UnitySceneTestHostOptions.cs
bindings/dotnet/src/Gua.Testing.Visual/: Compatibility.cs  Gua.Testing.Visual.csproj  GuaRecording.cs  GuaScreenshotComparison.cs  README.md
bindings/dotnet/tests/Gua.Godot.Visual.Integration.Tests/: GodotVisualIntegrationTests.cs  Gua.Godot.Visual.Integration.Tests.csproj
bindings/dotnet/tests/Gua.Selector.Tests/: Gua.Selector.Tests.csproj  SelectorParityTests.cs
bindings/dotnet/tests/Gua.Unity.Integration.Tests/: Gua.Unity.Integration.Tests.csproj  UnityIntegrationTests.cs
bindings/dotnet/tests/Gua.Visual.Tests/: Gua.Visual.Tests.csproj  RecordingTests.cs  VisualTests.cs
bindings/unity/: package.json
bindings/unity/Documentation~/: index.md
bindings/unity/Editor/: Gua.Unity.Editor.asmdef  GuaUnityEditorCommands.cs
bindings/unity/Runtime/: Gua.Unity.asmdef  GuaIdentity.cs  GuaUnityAdapterRegistry.cs  GuaUnityKeyEvent.cs  GuaUnityRuntime.cs  link.xml
bindings/unity/Runtime/Bootstrap/: Gua.Unity.Bootstrap.asmdef  GuaUnityBootstrap.cs
bindings/unity/Runtime/TMP/: Gua.Unity.TMP.asmdef  GuaUnityTmpAdapter.cs
bindings/unity/Samples~/Runtime UI Fixture/: GuaRuntimeUiSample.cs  GuaRuntimeUiSample.unity  README.md
docs/: bug-hunting-subagent.md  native-toolchains.md
docs/ai/: repository-brief.md
docs/planning/: gua-project-plan.md
examples/cpp-imgui/: CMakeLists.txt  README.md  main.cpp
examples/dotnet-godot/: GuaGodotSample.csproj  Main.tscn  README.md  icon.svg.import  project.godot
examples/dotnet-godot/addons/gua/: GuaGodotRuntime.cs  GuaGodotRuntime.cs.uid  GuaRuntimeNative.cs  GuaRuntimeNative.cs.uid  README.md  plugin.cfg  plugin.gd.uid
examples/dotnet-godot/scripts/: Main.cs  Main.cs.uid
examples/dotnet-monogame/: README.md
examples/dotnet-nunit/: GuaDotNetNUnitSample.csproj  GuaNUnitAttachments.cs  NuGet.config  README.md  TitleScreenTests.cs
examples/dotnet-testing/: GuaDotNetTestingSample.csproj  Program.cs  README.md
examples/godot-gdscript/: Main.tscn  README.md  icon.svg.import  project.godot
examples/godot-gdscript/addons/gua/: gua.gdextension  gua.gdextension.uid  gua_auto_adapter.gd  plugin.cfg  plugin.gd.uid
examples/godot-gdscript/scripts/: gua_smoke.gd  main.gd  main.gd.uid
examples/minimal/: README.md
examples/native-bridge/: CMakeLists.txt  README.md  main.cpp
examples/unity-smoke/: .gitignore  Gua.UnitySmoke.csproj  Program.cs  README.md
examples/unity-smoke/Assets/: GuaUnityFixture.cs  GuaUnitySmoke.cs
examples/unity-smoke/Assets/Editor/: GuaUnityFixtureAssets.cs
examples/unity-smoke/Assets/Resources/: GuaFixturePanelSettings.asset
examples/unity-smoke/ProjectSettings/: ProjectSettings.asset
native/gua-core/: CMakeLists.txt
native/gua-core/include/gua/: gua.h  gua.hpp
native/gua-core/src/: gua.cpp
native/gua-core/tests/: selector_tests.cpp  state_model_tests.cpp
native/gua-godot/: CMakeLists.txt  README.md
native/gua-godot/include/gua/godot/: gua_context.hpp  register_types.hpp
native/gua-godot/src/: gua_context.cpp  register_types.cpp
native/gua-imgui/: CMakeLists.txt
native/gua-imgui/include/gua/: imgui_adapter.hpp
native/gua-runtime/: CMakeLists.txt
native/gua-runtime/include/gua/: runtime.h
native/gua-runtime/src/: runtime.cpp
native/gua-runtime/tests/: screenshot_request_tests.cpp
native/gua-testing/: CMakeLists.txt
native/gua-testing/include/gua/: testing.hpp
native/gua-ws-bridge/: CMakeLists.txt
native/gua-ws-bridge/include/gua/: ws_bridge.hpp
native/gua-ws-bridge/src/: ws_bridge_win32.cpp
protocol/fixtures/: action-request-v1.json  action-result-v1.json  capture-screenshot-command-v1.json  diagnostics-v1.json  recording-v1.json  reset-context-v1.json  screenshot-capture-v1.json  selector-v1.json  ui-tree-v2.json  version-v1.json
protocol/schema/: commands.schema.json  diagnostics.schema.json  events.schema.json  logs.schema.json  recording.schema.json  screenshot-capture.schema.json  screenshot.schema.json  selector.schema.json  ui-tree.schema.json  version.schema.json
protocol/specs/: protocol.md
scripts/: build-unity-package.ps1  copy-unity-managed-closure.ps1  import-unity-tmp-resources.ps1  package-unity-upm-ci.ps1  prepare-unity-package-ci.ps1
